fix mobile overflow

--- a/src/styles/_reset.module.scss
+++ b/src/styles/_reset.module.scss
@@ -114,18 +114,9 @@ h6 {
   opacity: 0;
   transform: translateY(50px);
   transition: opacity 0.5s ease-out, transform 0.5s ease-out;
-
-  &:nth-child(even) {
-    transform: translateX(50px);
-  }
-
 }
 
 .reveal-visible {
   opacity: 1;
   transform: translateY(0);
-
-  &:nth-child(even) {
-    transform: translateX(0);
-  }
 }
